force-app/main/default/objects/DataMigrationEvent__e/DataMigrationEvent__e.object-meta.xml
<CustomObject>
    <description>Platform Event for Account data migration across GDPR zones</description>
    <label>Data Migration Event</label>
    <pluralLabel>Data Migration Events</pluralLabel>
</CustomObject>