force-app/main/default/objects/DataMigrationEvent__e/fields/AccountId__c.field-meta.xml
<CustomField>
    <fullName>AccountId__c</fullName>
    <description>ID of the Account that needs data migration</description>
    <label>Account ID</label>
    <length>18</length>
    <required>true</required>
    <type>Text</type>
</CustomField>