force-app/main/default/objects/DataMigrationEvent__e/fields/NewCountry__c.field-meta.xml
<CustomField>
    <fullName>NewCountry__c</fullName>
    <description>New BillingCountry value</description>
    <label>New Country</label>
    <length>100</length>
    <required>true</required>
    <type>Text</type>
</CustomField>