force-app/main/default/objects/DataMigrationEvent__e/fields/OldCountry__c.field-meta.xml
<CustomField>
    <fullName>OldCountry__c</fullName>
    <description>Previous BillingCountry value</description>
    <label>Old Country</label>
    <length>100</length>
    <type>Text</type>
</CustomField>