force-app/main/default/objects/DataMigrationEvent__e/fields/Reason__c.field-meta.xml
<CustomField>
    <fullName>Reason__c</fullName>
    <description>Reason for data migration (e.g., Country Change, Manual Request)</description>
    <label>Reason</label>
    <length>255</length>
    <type>Text</type>
</CustomField>